# AI2Q

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  docker-compose.yml  grit.config.ts  package.json
.github/workflows/: ci.yml
apps/admin/: package.json
apps/admin/app/: layout.tsx
apps/admin/components/layout/: sidebar.tsx
apps/admin/components/ui/: dropzone.tsx
apps/admin/hooks/: use-system.ts
apps/admin/lib/: api-client.ts  resource.ts
apps/admin/resources/: endpoints.ts  execution-logs.ts  index.ts
apps/api-go/: go.mod  go.sum
apps/api-go/cmd/migrate/: main.go
apps/api-go/cmd/seed/: main.go
apps/api-go/cmd/server/: main.go
apps/api-go/internal/aiql/: aiql.go  driver.go
apps/api-go/internal/database/: seed.go
apps/api-go/internal/handlers/: ai.go  aiql.go  auth.go  blog_handler.go  cron.go  endpoint.go  upload.go  user.go
apps/api-go/internal/jobs/: workers.go
apps/api-go/internal/middleware/: auth.go  cache.go
apps/api-go/internal/models/: endpoint.go  log.go  user.go
apps/api-go/internal/routes/: routes.go
apps/api-go/internal/services/: blog_service.go
apps/api-go/internal/storage/: storage.go
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  tui.rs
apps/docs/: Dockerfile  package.json  tailwind.config.js  tsconfig.json
apps/docs/app/: layout.tsx  page.tsx
apps/docs/app/docs/: layout.tsx
apps/docs/content/docs/: about.mdx  getting-started.mdx  index.mdx  meta.json  no-code-sync.mdx  self-healing.mdx
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/playground/: page.tsx
apps/web/app/schema/: page.tsx
apps/web/components/: footer.tsx  navbar.tsx
apps/web/lib/: aiql.ts
bindings/go/: aiql.go
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/aiql/: __init__.py
bindings/python/python/tests/: test_all.py
bindings/python/src/: lib.rs
crates/aiql-core/: Cargo.toml
crates/aiql-core/src/: lib.rs
crates/aiql-core/src/cache/: memory.rs  mod.rs
crates/aiql-ffi/: Cargo.toml
crates/aiql-ffi/src/: lib.rs
docs/: supabase_setup.sql
(+39 files in other folders)
