[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aiql-core = { version = "0.1.0", path = "../../crates/aiql-core" }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29.0"
dialoguer = "0.12.0"
ratatui = "0.30.0"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite"] }
tokio = { version = "1.50.0", features = ["full"] }
