[package]
name = "aiql"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aiql"
crate-type = ["cdylib"]

[dependencies]
aiql-core = { version = "0.1.0", path = "../../crates/aiql-core" }
anyhow = "1.0.102"
async-trait = "0.1.89"
pyo3 = { version = "0.28.2", features = ["extension-module"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
