[package]
name = "aiql"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aiql"
crate-type = ["cdylib"]

[dependencies]
aiql-core = { version = "0.1.0", path = "../../crates/aiql-core" }
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
